[package]
name = "cellular-automata-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
bevy_console = "0.14.0"
bevy_egui = "0.34.1"
bevy_prng = { version = "0.11.0", features = ["wyrand"] }
bevy_rand = "0.11.0"
bevy_simple_subsecond_system = "0.1.11"
rand = "0.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"
