[package]
name = "cellular-automata-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
bevy_console = "0.14.0"
bevy_egui = "0.34.1"
bevy_prng = { version = "0.11.0", features = ["wyrand"] }
bevy_rand = "0.11.0"
# Upstream is waiting on a dioxus release; use the git dependency for now
bevy_simple_subsecond_system = { git = "https://github.com/TheBevyFlock/bevy_simple_subsecond_system", version = "0.2.0" }
clap = "4.5.39"
noiz = "0.2.0"
rand = "0.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"

[profile]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
